--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 body {
 	background-image: url(../images/sayagata-400px.png);
+
 }
 
 #whiteBar {
-	background-color:white;
-	border-bottom: 1px solid #c0c0c0;
+	background-color:#ffffff;
+	border-bottom: 1px solid #cccccc;
 
 }
 
@@ -19,7 +20,7 @@ body {
 
 }
 
-#largeHding { 
+#largeHeding { 
 	border-bottom: 2px solid #c0c0c0;
 
 }
@@ -29,29 +30,42 @@ body {
 
 }
 
-p {
-
+p { 
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color:#777777;
 }
 h1 {
-
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
 }
 
-/* h2 is only on contact.html */
+/* h2 is only on contact.html without id */
 h2 {
-
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 
 } 
+
+h3 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #ffffff;
+	font-size: smaller;
+	font-weight: lighter;
+
+}
 
 
 #mediasection {
 	background-color:white;
-	border-bottom: 1px solid #c0c0c0;
+	border: 1px solid #c0c0c0;
+
 
 }
 
 
 #connect {
 	border-bottom: 1px solid #c0c0c0;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	color: #4aaaa5;
 
 
 }
@@ -67,15 +81,25 @@ h2 {
 
 
 #graybar{
-	background-color:#4aaaa5;
+	background-color:#555555;
+	
 
 }
 
 #copyright {
+	color: #ffffff;
+	font-size: 11px;
 
 }
 
 #logo {
+
+
+}
+
+.logo {
+	background-color:#4aaaa5;
+	color: #ffffff;
 
 }
 
@@ -85,10 +109,18 @@ nav {
 }
 
 ul {
+	margin:0px;
+	list-style-type: none;
+
 
 }
 
 li {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color:#777777;
+	font-size: 13px;
+	display: inline;
+	padding: 0px 10px 0px 10px;
 
 }
 
@@ -123,26 +155,32 @@ li {
 
 /* Portfolio pictures labels */
 #hangBar {
+	background-color:#4aaaa5;
+
 
 }
 
 
 #rprgBar {
+	background-color:#4aaaa5;
 
 }
 
 
 #triviaBar {
+	background-color:#4aaaa5;
 
 }
 
 
 #rutgersBar {
+	background-color:#4aaaa5;
 
 }
 
 
 #prsBar {
+	background-color:#4aaaa5;
 
 }
 
