--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,70 @@
-body {
-	background-image: url(../images/sayagata-400px.png);
+body {margin: 0px;
+	
+}
 
+#content {
+	background-image: url(../images/sayagata-400px.png);
+	width: 960px;
+	margin: auto;
 }
 
 #whiteBar {
 	background-color:#ffffff;
 	border-bottom: 1px solid #cccccc;
-
+	width: 960px;
+	height: 90px;
 }
 
 #maincont {
-
+	overflow: auto;
 
 }
 
 #mainsection { 
 	background-color:white;
-	border: 1px solid #c0c0c0;
+	border: 1px solid  
+	padding: 2px;
+	width: 650px;
+	float: left;
+
 
 }
 
 #largeHeding { 
 	border-bottom: 2px solid #c0c0c0;
+	padding: 20px;
+	width: 620 px;
+
 
 }
 
 /* mypicture is only at index.html */
-#mypicture {
+#mypicture { 
+	padding: 20px;
+	
 
+}
+
+#myprofile {
+	padding: 2px;
+	
 }
 
 p { 
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color:#777777;
+	padding: 5px;
 }
 h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
+	padding: 2px;
 }
 
 /* h2 is only on contact.html without id */
 h2 {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-
+	padding: 2px;
 } 
 
 h3 {
@@ -50,6 +72,7 @@ h3 {
 	color: #ffffff;
 	font-size: smaller;
 	font-weight: lighter;
+	padding: 2px;
 
 }
 
@@ -57,7 +80,9 @@ h3 {
 #mediasection {
 	background-color:white;
 	border: 1px solid #c0c0c0;
-
+	padding: 2px;
+	width: 190px;
+	float: left;
 
 }
 
@@ -66,29 +91,38 @@ h3 {
 	border-bottom: 1px solid #c0c0c0;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
+	padding: 2px;
 
 
 }
 
 .medialogos {
+	padding: 2px;
 	
 }
 
 #tealbar {
 	background-color:#4aaaa5;
-
+	width: 960px;
+	height: 3px;
+	clear: both;
+	margin: 0px;
 }
 
 
 #graybar{
 	background-color:#555555;
-	
-
+	width: 960px;
+	height: 70px;
+	margin: 0px;
 }
+
 
 #copyright {
 	color: #ffffff;
 	font-size: 11px;
+	padding: 2px;
+	text-align: center;
 
 }
 
@@ -100,6 +134,7 @@ h3 {
 .logo {
 	background-color:#4aaaa5;
 	color: #ffffff;
+	padding: 2px;
 
 }
 
@@ -111,6 +146,7 @@ nav {
 ul {
 	margin:0px;
 	list-style-type: none;
+	padding: 2px;
 
 
 }
@@ -129,27 +165,32 @@ li {
 
 /* Portfolio Pictures */
 #hangPict {
-
+	width: 210px;
+	height: 106px;
 }
 
 
 #rpgPict {
-
+	width: 210px;
+	height: 106px;
 }
 
 
 #triviapict {
-
+	width: 210px;
+	height: 106px;
 }
 
 
 #rutgerspict {
-
+	width: 210px;
+	height: 106px;
 }
 
 
 #prspict {
-
+	width: 210px;
+	height: 106px;
 }
 
 
@@ -184,3 +225,6 @@ li {
 
 }
 
+.projects {padding: 2px;
+
+}
