--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-body {margin: 0px;
-	
+body {margin: 0px;	
 }
+
 
 #content {
 	background-image: url(../images/sayagata-400px.png);
@@ -8,64 +8,68 @@ body {margin: 0px;
 	margin: auto;
 }
 
+
 #whiteBar {
-	background-color:#ffffff;
+	background-color: #ffffff;
 	border-bottom: 1px solid #cccccc;
-	width: 960px;
+	width: 100%;
 	height: 90px;
 }
 
+
 #maincont {
 	overflow: auto;
-
 }
+
 
 #mainsection { 
 	background-color:white;
-	border: 1px solid  
+	border: 1px solid  #777777;
 	padding: 2px;
-	width: 650px;
+	width: 556px;
 	float: left;
-
-
+	margin: 35px 30px 35px 60px;
 }
+
 
 #largeHeding { 
 	border-bottom: 2px solid #c0c0c0;
 	padding: 20px;
 	width: 620 px;
-
-
 }
+
 
 /* mypicture is only at index.html */
 #mypicture { 
 	padding: 20px;
-	
-
 }
+
 
 #myprofile {
 	padding: 2px;
-	
 }
+
 
 p { 
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color:#777777;
 	padding: 5px;
 }
+
+
 h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
 	padding: 2px;
 }
 
+
 /* h2 is only on contact.html without id */
 h2 {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	padding: 2px;
+	
 } 
+
 
 h3 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
@@ -73,17 +77,16 @@ h3 {
 	font-size: smaller;
 	font-weight: lighter;
 	padding: 2px;
-
 }
 
 
 #mediasection {
-	background-color:white;
+	background-color: white;
 	border: 1px solid #c0c0c0;
 	padding: 2px;
-	width: 190px;
+	width: 240px;
+	margin: 35px 5px 35px 0px;
 	float: left;
-
 }
 
 
@@ -92,18 +95,17 @@ h3 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	color: #4aaaa5;
 	padding: 2px;
-
-
+	text-align: center;
 }
 
+
 .medialogos {
-	padding: 2px;
-	
+	padding: 2px 0px 2px 27px;
 }
 
 #tealbar {
 	background-color:#4aaaa5;
-	width: 960px;
+	width: 100%;
 	height: 3px;
 	clear: both;
 	margin: 0px;
@@ -112,7 +114,7 @@ h3 {
 
 #graybar{
 	background-color:#555555;
-	width: 960px;
+	width: 100%;
 	height: 70px;
 	margin: 0px;
 }
@@ -121,46 +123,51 @@ h3 {
 #copyright {
 	color: #ffffff;
 	font-size: 11px;
-	padding: 2px;
 	text-align: center;
-
+	margin: 0px;
+	padding-top: 27px;
 }
 
-#logo {
 
+#logo {
+	width: 250px;
+	height: 60px;
+	background-color: #4aaaa5;
+	position: absolute;
+	top: 30px;
+	right:970px;
 
 }
 
 .logo {
-	background-color:#4aaaa5;
+	
 	color: #ffffff;
 	padding: 2px;
-
+	text-align: center;
 }
 
 
-nav {
-
+nav { 
+	position: absolute;
+	top: 30px;
+	right: 310px
 }
+
 
 ul {
-	margin:0px;
+	margin: 0px;
 	list-style-type: none;
 	padding: 2px;
-
-
 }
+
 
 li {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	color:#777777;
+	color: #777777;
 	font-size: 13px;
 	display: inline;
 	padding: 0px 10px 0px 10px;
-
 }
-
-
 
 
 /* Portfolio Pictures */
@@ -197,34 +204,34 @@ li {
 /* Portfolio pictures labels */
 #hangBar {
 	background-color:#4aaaa5;
-
-
+	width: 210px;
 }
 
 
 #rprgBar {
 	background-color:#4aaaa5;
-
+	width: 210px;
 }
 
 
 #triviaBar {
 	background-color:#4aaaa5;
-
+	width: 210px;
 }
 
 
 #rutgersBar {
 	background-color:#4aaaa5;
-
+	width: 210px;
 }
 
 
 #prsBar {
 	background-color:#4aaaa5;
-
+	width: 210px;
 }
 
-.projects {padding: 2px;
 
+.projects {padding: 2px;
+	width: 210px;
 }
