--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,9 @@ body {margin: 0px;
 	border-bottom: 1px solid #cccccc;
 	width: 100%;
 	height: 90px;
+	overflow: hidden;
 }
+
 
 
 #maincont {
@@ -29,27 +31,34 @@ body {margin: 0px;
 	width: 556px;
 	float: left;
 	margin: 35px 30px 35px 60px;
+	overflow: hidden;
 }
 
 
 #largeHeding { 
 	border-bottom: 2px solid #c0c0c0;
 	padding: 20px;
-	width: 620 px;
+	width: 500px;
+	margin: auto;
 }
 
 
 /* mypicture is only at index.html */
 #mypicture { 
 	padding: 20px;
+	float:left;
 }
 
 
-#myprofile {
-	padding: 2px;
+#text1 {
+	width: 200px
+	float: left;
+} 
+
+
+#text2 {
+	clear: both;
 }
-
-
 p { 
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color:#777777;
@@ -59,9 +68,8 @@ p {
 
 h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	color: #4aaaa5;
-	padding: 2px;
-}
+	color: #4aaaa5; 
+	}
 
 
 /* h2 is only on contact.html without id */
@@ -104,10 +112,14 @@ h3 {
 	padding: 2px 0px 2px 27px;
 }
 
+#stack {
+	border-radius: 5px 5px 5px 5px;
+}
+
 #tealbar {
 	background-color:#4aaaa5;
 	width: 100%;
-	height: 3px;
+	height: 5px;
 	clear: both;
 	margin: 0px;
 }
@@ -130,22 +142,7 @@ h3 {
 }
 
 
-#logo {
-	width: 250px;
-	height: 60px;
-	background-color: #4aaaa5;
-	position: absolute;
-	top: 30px;
-	right:970px;
 
-}
-
-.logo {
-	
-	color: #ffffff;
-	padding: 2px;
-	text-align: center;
-}
 
 
 nav { 
@@ -169,6 +166,19 @@ li {
 	display: inline;
 	padding: 0px 10px 0px 10px;
 }
+
+
+a:link, a:visited {
+	color:#777777;
+	text-decoration:none;
+}
+
+a:hover, a:active {
+	color:red;
+	font-weight: bolder;
+	text-shadow: 2px;
+}
+
 
 
 .banner {
@@ -226,4 +236,35 @@ li {
 	background-image: url(../images/rockpaper.jpg);
 	overflow: hidden;
 	float:left;
+}
+
+#formcontainer {	
+	margin: 0px 0px 0px 10px;	
+}
+#button {
+	margin: 10px;
+}
+
+#box {
+	width: 250px;
+	height: 70px;
+	margin: 0px;
+	overflow:hidden;
+	background-color: #4aaaa5;
+	position: absolute;
+	top: 20px;
+	right:970px; 
+}
+
+#frame {
+	width:250px;
+	
+}
+
+#mynametext {
+	width: 250px;
+	padding-bottom: 10px; 
+	text-align: center;
+	color:#ffffff;
+
 }
